# wikidichConverter

./: README.md  requirements.txt  setup.cfg
src/: setup.py
src/test/: sample.epub  test_chapter.py  test_mainpage.py
src/test/test_cases/: chapter_text.txt
src/wikidichConverter/: MANIFEST.in  convert.py  generate_files.py  generate_pdf.py  parse_chapter.py  parse_mainpage.py
src/wikidichConverter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
