[metadata]
name = wikidichConverter
version = 0.1.3
author = Ha Le
author_email = le.ha1@northeastern.edu
description = Python Package that convert wikidich books to PDF files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hvrlxy/wikidichConverter
project_urls =
    Bug Tracker = https://github.com/hvrlxy/wikidichConverter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src